--- a/notebooks/results_test_seq.ipynb
+++ b/notebooks/results_test_seq.ipynb
@@ -36,19 +36,9 @@
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "from scipy.stats import pearsonr, ttest_ind\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
     "from dataset import get_loaders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = get_loaders(batch_size=32, meta=False,\n",
-    "                    use_images=True, image_dir='images/',\n",
-    "                    n_episodes=None)\n",
-    "train_data, train_loader, test_data, test_loader, analyze_data, analyze_loader = data\n"
    ]
   },
   {
@@ -57,9 +47,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('results/results.P', 'rb') as f:\n",
-    "    results = pickle.load(f)\n",
-    "cortical_results = results['Cortical']"
+    "data = get_loaders(batch_size=32, meta=False,\n",
+    "                    use_images=True, image_dir='../images/',\n",
+    "                    n_episodes=None)\n",
+    "train_data, train_loader, test_data, test_loader, analyze_data, analyze_loader = data\n"
    ]
   },
   {
@@ -68,34 +59,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('results/results.P', 'rb') as f:\n",
+    "idx2loc = {idx:loc for loc, idx in test_data.loc2idx.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../../results/results_rnn_corr.P', 'rb') as f:\n",
     "    results = pickle.load(f)\n",
     "cortical_results = results['Cortical']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "dict_keys(['loss', 'train_acc', 'test_acc', 'analyze_acc', 'analyze_correct', 'analysis', 'cortical_runs'])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
-   "source": [
-    "cortical_results.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,37 +84,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "IndexError",
-     "evalue": "index 1 is out of bounds for dimension 0 with size 1",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-4de2a3dc6727>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0midx1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0midx1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0midx2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0midx2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ctxAX_gGRP\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"AX\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"GRP\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mf1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: index 1 is out of bounds for dimension 0 with size 1"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy at t=1 contex 0 [0.0, 0.3333333333333333, 0.6666666666666666, 0.0]\nAccuracy at t=1 contex 1 [0.25, 0.5, 0.4166666666666667, 0.25]\n"
      ]
     }
    ],
    "source": [
-    "for batch in analyze_loader:\n",
-    "    # if model.analyze:\n",
+    "hidd_t_idx = 1 # at what time step, t = 1 means at the time of face1 \n",
+    "                              # and t = 2 means at the time of face2\n",
+    "# create groups based on the row or columns\n",
+    "# e.g, for context0 (xaxis), first column is group 1, sec col is group 2, and so on.\n",
+    "# 4 groups for each axis/context; total 8 groups\n",
+    "\n",
+    "ctx0_g0=[]\n",
+    "ctx0_g1=[]\n",
+    "ctx0_g2=[]\n",
+    "ctx0_g3=[]\n",
+    "\n",
+    "ctx1_g0=[]\n",
+    "ctx1_g1=[]\n",
+    "ctx1_g2=[]\n",
+    "ctx1_g3=[]\n",
+    "\n",
+    "for i, batch in enumerate(analyze_loader):\n",
     "    f1, f2, ax, y, idx1, idx2 = batch\n",
+    "    acc = analyze_correct[i][hidd_t_idx]\n",
+    "    ax = ax.cpu().numpy().squeeze()\n",
     "    idx1 = idx1[0]\n",
     "    idx2 = idx2[0]\n",
-    "    eval(\"ctxAX_gGRP\", {\"AX\": ax, \"GRP\": f1[ax]})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eval(\"ctxAX_gGRP\", {\"AX\": 0, \"GRP\": 1})"
+    "    loc1 = idx2loc[idx1]\n",
+    "    loc2 = idx2loc[idx2]\n",
+    "    if ax==0:\n",
+    "        if loc1[ax]==0: ctx0_g0.append(acc) # (len(all_perms)/2) / 4 = [48]\n",
+    "        elif loc1[ax]==1: ctx0_g1.append(acc)\n",
+    "        elif loc1[ax]==2: ctx0_g2.append(acc)\n",
+    "        elif loc1[ax]==3: ctx0_g3.append(acc)\n",
+    "    elif ax==1:\n",
+    "        if loc1[ax]==0: ctx1_g0.append(acc)\n",
+    "        elif loc1[ax]==1: ctx1_g1.append(acc)\n",
+    "        elif loc1[ax]==2: ctx1_g2.append(acc)\n",
+    "        elif loc1[ax]==3: ctx1_g3.append(acc)\n",
+    "ctx0_accs = [np.mean(ctx0_g0), np.mean(ctx0_g1), \n",
+    "            np.mean(ctx0_g2), np.mean(ctx0_g3) ]\n",
+    "ctx1_accs = [np.mean(ctx1_g0), np.mean(ctx1_g1), \n",
+    "            np.mean(ctx1_g2), np.mean(ctx1_g3) ]\n",
+    "            \n",
+    "print('Accuracy at t=%s contex 0' %(hidd_t_idx), ctx0_accs)\n",
+    "print('Accuracy at t=%s contex 1' %(hidd_t_idx), ctx1_accs)"
    ]
   },
   {
