cleaning the code for muliple runs

--- a/notebooks/results_test_seq.ipynb
+++ b/notebooks/results_test_seq.ipynb
@@ -64,34 +64,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../../results/results_rnn_corr.P', 'rb') as f:\n",
-    "    results = pickle.load(f)\n",
-    "cortical_results = results['Cortical']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "analyze_correct = cortical_results['analyze_correct']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy at t=1 contex 0 [0.0, 0.3333333333333333, 0.6666666666666666, 0.0]\nAccuracy at t=1 contex 1 [0.25, 0.5, 0.4166666666666667, 0.25]\n"
+      "dict_keys(['Episodic', 'Cortical'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('../../results/results_rnn.P', 'rb') as f:\n",
+    "    results = pickle.load(f)\n",
+    "print(results.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analyze_correct = results['Cortical']['analyze_correct']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy at t=1 (face1) contex 0: [0.0, 0.3333333333333333, 0.6666666666666666, 0.75]\nAccuracy at t=1 (face1) contex 1: [0.0, 0.5, 0.4166666666666667, 0.25]\n"
      ]
     }
    ],
@@ -135,8 +143,8 @@
     "ctx1_accs = [np.mean(ctx1_g0), np.mean(ctx1_g1), \n",
     "            np.mean(ctx1_g2), np.mean(ctx1_g3) ]\n",
     "            \n",
-    "print('Accuracy at t=%s contex 0' %(hidd_t_idx), ctx0_accs)\n",
-    "print('Accuracy at t=%s contex 1' %(hidd_t_idx), ctx1_accs)"
+    "print('Accuracy at t=%s (face1) contex 0:' %(hidd_t_idx), ctx0_accs)\n",
+    "print('Accuracy at t=%s (face1) contex 1:' %(hidd_t_idx), ctx1_accs)"
    ]
   },
   {
