changing the order of the axis as either first or last and added it to args

--- a/notebooks/results_test_seq.ipynb
+++ b/notebooks/results_test_seq.ipynb
@@ -66,6 +66,16 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax_order = 'first'\n",
+    "ax_order_str = 'axF'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
@@ -76,14 +86,14 @@
     }
    ],
    "source": [
-    "with open('../../results/results_rnn.P', 'rb') as f:\n",
+    "with open('../../results/%s_results_rnn.P' %(ax_order_str), 'rb') as f:\n",
     "    results = pickle.load(f)\n",
     "print(results.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +162,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Axis first\n",
+    "- Accuracy at t=1 (face1) contex 0: [0.0, 0.33, 0.66, 0.75]\n",
+    "- Accuracy at t=1 (face1) contex 1: [0.0, 0.5, 0.417, 0.25]\n",
+    "\n",
+    "# Axis last\n",
+    "- Accuracy at t=1 (face1) contex 0: [0.0, 0.33, 0.66, 0.35]\n",
+    "- Accuracy at t=1 (face1) contex 1: [0.0, 0.396, 0.60, 0.75]"
+   ]
   }
  ]
 }
