--- a/notebooks/results_test_seq.ipynb
+++ b/notebooks/results_test_seq.ipynb
@@ -26,49 +26,100 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "source": [
     "import pickle\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
-    "from scipy.stats import pearsonr, ttest_ind\n",
+    "# from scipy.stats import pearsonr, ttest_ind\n",
     "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "from dataset import get_loaders"
+    "sys.path.append('..')\n",
+    "from utils.util import *\n",
+    "# from dataset import get_loaders\n",
+    "import seaborn as sns\n",
+    "sns.set_theme()\n",
+    "sns.set_style(\"darkgrid\")\n",
+    "# sns.set_context(\"paper\")\n",
+    "sns.set_context(\"talk\")"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "source": [
     "ctx_order = 'first'\n",
-    "ctx_order_str = 'ctxF'"
+    "ctx_order_str = 'ctxF'\n",
+    "analyze_name = 'analyze_test_seq'"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "source": [
-    "with open('../../results/test_seq_%s_results_rnn.P' %(ctx_order_str), 'rb') as f:\n",
-    "    results = pickle.load(f)\n",
-    "print(results.keys())\n",
-    "# test_seq_ctxF_results_rnn.P\n",
-    "# with open('../../results/test_seq_results.P', 'rb') as f:\n",
-    "#     results = pickle.load(f)\n",
-    "# print(results.keys())"
+    "with open('../../results/%s_results_mlp.P' %(analyze_name), 'rb') as f:\n",
+    "    mlp_results = pickle.load(f)\n",
+    "\n",
+    "with open('../../results/%s_%s_results_rnn.P' %(analyze_name, ctx_order_str), 'rb') as f:\n",
+    "    rnn_results = pickle.load(f)\n",
+    "\n",
+    "with open('../../results/%s_%s_results_rnncell.P' %(analyze_name, ctx_order_str), 'rb') as f:\n",
+    "    rnncell_results = pickle.load(f)\n",
+    "\n",
+    "with open('../../results/%s_results_stepwisemlp.P' %(analyze_name), 'rb') as f:\n",
+    "    swmlp_results = pickle.load(f)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "n_runs = np.asarray(mlp_results[analyze_name]).shape[0]\n",
+    "mlp_results[analyze_name][0][0]"
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "dict_keys(['test_seq_results', 'dist_results'])\n"
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "([0.0, 0.3333333333333333, 0.6666666666666666, 1.0],\n",
+       " [1.0, 0.6666666666666666, 0.3333333333333333, 0.0])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "mlp_runs     = dict_to_list(mlp_results, analyze_name)\n",
+    "rnn_runs     = dict_to_list(rnn_results, analyze_name)\n",
+    "rnncell_runs = dict_to_list(rnncell_results, analyze_name)\n",
+    "swmlp_runs   = dict_to_list(swmlp_results, analyze_name)\n",
+    "mlp_runs.keys()"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'items'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-65939f76f2d1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmlp_runs\u001b[0m     \u001b[0;34m=\u001b[0m \u001b[0mdict_to_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmlp_results\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manalyze_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mrnn_runs\u001b[0m     \u001b[0;34m=\u001b[0m \u001b[0mdict_to_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrnn_results\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manalyze_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mrnncell_runs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict_to_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrnncell_results\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manalyze_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mswmlp_runs\u001b[0m   \u001b[0;34m=\u001b[0m \u001b[0mdict_to_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mswmlp_results\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manalyze_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmlp_runs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/MyResearch/UCDavis/Projects/Navigation/map_making/CSLS/WarpedCSLS/WCSLS/utils/util.py\u001b[0m in \u001b[0;36mdict_to_list\u001b[0;34m(results, analyze_name)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mcheckpoints\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mcp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_checkpoints\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m             \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0manalyze_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcp\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mcp\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m                     \u001b[0mcheckpoints\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'items'"
      ]
     }
    ],
