--- a/notebooks/results_test_seq.ipynb
+++ b/notebooks/results_test_seq.ipynb
@@ -79,6 +79,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# with open('../../results/%s_results_mlp.P' %(analyze_name), 'rb') as f:\n",
+    "#     mlp_results = pickle.load(f)\n",
+    "# # ----------------------\n",
+    "# ctx_order = 'first'\n",
+    "# ctx_order_str = 'ctxF'\n",
+    "# # ----------------------\n",
+    "# with open('../../results/%s_%s_results_rnn.P' %(analyze_name, ctx_order_str), 'rb') as f:\n",
+    "#     rnn_results_ctxF = pickle.load(f)\n",
+    "\n",
+    "# with open('../../results/%s_%s_results_rnncell.P' %(analyze_name, ctx_order_str), 'rb') as f:\n",
+    "#     rnncell_results_ctxF = pickle.load(f)\n",
+    "\n",
+    "# with open('../../results/%s_%s_results_rnn_balanced.P' %(analyze_name, ctx_order_str), 'rb') as f:\n",
+    "#     rnnb_results_ctxF = pickle.load(f)\n",
+    "# # ----------------------\n",
+    "# ctx_order = 'last'\n",
+    "# ctx_order_str = 'ctxL'\n",
+    "# # ----------------------\n",
+    "# with open('../../results/%s_%s_results_rnn.P' %(analyze_name, ctx_order_str), 'rb') as f:\n",
+    "#     rnn_results_ctxL = pickle.load(f)\n",
+    "\n",
+    "# with open('../../results/%s_%s_results_rnncell.P' %(analyze_name, ctx_order_str), 'rb') as f:\n",
+    "#     rnncell_results_ctxL = pickle.load(f)\n",
+    "\n",
+    "# with open('../../results/%s_%s_results_rnn_balanced.P' %(analyze_name, ctx_order_str), 'rb') as f:\n",
+    "#     rnnb_results_ctxL = pickle.load(f)\n",
+    "# # ----------------------\n",
+    "# with open('../../results/%s_results_stepwisemlp.P' %(analyze_name), 'rb') as f:\n",
+    "#     swmlp_results = pickle.load(f)\n",
+    "\n",
+    "# with open('../../results/%s_results_truncated_stepwisemlp.P' %(analyze_name), 'rb') as f:\n",
+    "#     swmlp_trunc_results = pickle.load(f)\n",
+    "# # ----------------------\n",
+    "# with open('../../results/%s_results_mlp_cc.P' %(analyze_name), 'rb') as f:\n",
+    "#     mlpcc_results = pickle.load(f)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# mlp_runs          = dict_to_list(mlp_results, analyze_name)\n",
+    "# rnn_runs_ctxF     = dict_to_list(rnn_results_ctxF, analyze_name)\n",
+    "# rnncell_runs_ctxF = dict_to_list(rnncell_results_ctxF, analyze_name)\n",
+    "# rnnb_runs_ctxF     = dict_to_list(rnnb_results_ctxF, analyze_name)\n",
+    "# rnn_runs_ctxL     = dict_to_list(rnn_results_ctxL, analyze_name)\n",
+    "# rnncell_runs_ctxL = dict_to_list(rnncell_results_ctxL, analyze_name)\n",
+    "# rnnb_runs_ctxL     = dict_to_list(rnnb_results_ctxL, analyze_name)\n",
+    "# swmlp_runs        = dict_to_list(swmlp_results, analyze_name)\n",
+    "# mlpcc_runs        = dict_to_list(mlpcc_results, analyze_name)\n",
+    "# mlp_runs.keys()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "source": [
     "n_runs = np.asarray(mlp_results[analyze_name]).shape[0]\n",
